fix: sidebar icon alignment

--- a/src/fsolauncher_ui/fsolauncher.css
+++ b/src/fsolauncher_ui/fsolauncher.css
@@ -180,6 +180,10 @@ block {
   margin-top: -5px;
 }
 
+#sidebar li .material-icons.left {
+  margin-right: 8px;
+}
+
 #sidebar svg[class$="-icon"] {
   margin-left: 6px;
   margin-right: 7px;
